# prismata

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py
communication/: __init__.py  protocol.py
communication/transport/: __init__.py  base_transport.py  websocket_transport.py
core_agent/: __init__.py
core_agent/agent/: __init__.py  base_agent.py  langgraph_agent.py  state_models.py  workflow_nodes.py
core_agent/error/: error_handler.py  exceptions.py  recovery_service.py
core_agent/llm/: __init__.py  default_config.py  llm_config.py  llm_factory.py  llm_service.py
core_agent/tools/: code_completion_tool.py  code_tools.py  context_collection_tool.py  cross_file_analysis_tool.py  file_tools.py  refactoring_tools.py  write_file_tool.py
docs/: getting_started.md  milestones.md
shared/: __init__.py
shared/models/: __init__.py  code.py  file.py  history.py
shared/utils/: __init__.py  file_utils.py  logging_utils.py  path_utils.py
tests/: __init__.py  conftest.py  test_agent.py  test_code_models.py  test_code_tools.py  test_file_utils.py  test_history_manager.py  test_langgraph_agent_integration.py  test_llm_factory.py  test_llm_service.py  test_websocket_transport.py  test_workflow_nodes.py  test_write_file_tool.py
tests/integration/: test_milestone3_integration.py  test_simple_integration.py
vscode_extension/: package.json
vscode_extension/src/: extension.ts
vscode_extension/src/commands/: index.ts  refactorCommands.ts
vscode_extension/src/services/: agentService.ts  (+1 more)
(+11 files in other folders)
